--- a/css/style.css
+++ b/css/style.css
@@ -16468,17 +16468,11 @@ p {
   background-color: white;
 }
 
-.vertical-scroll .vertical-title .title-wrap.fixed-left {
-  position: fixed;
-  right: initial;
-}
-
 .vertical-scroll .vertical-title .title-wrap.fixed-right {
   position: fixed;
-  left: initial;
 }
 
-.vertical-scroll .vertical-title .title-wrap.is-last:before {
+.vertical-scroll .vertical-title .title-wrap.is-mask:before {
   content: "";
   position: absolute;
   z-index: 1;
@@ -16779,7 +16773,7 @@ p {
   z-index: 99;
   height: 100%;
   background-color: #fff;
-  padding: 4px 0 0px 4px;
+  padding: 3.5px 0 0px 4px;
   z-index: 999;
 }
 
@@ -20662,6 +20656,30 @@ p {
   animation-name: member-ani-even;
 }
 
+.color06 {
+  background: linear-gradient(to right, #2d376f, #f2b040);
+}
+
+.color05 {
+  background: linear-gradient(to right, #bb4e9c, #ec195b);
+}
+
+.color04 {
+  background: linear-gradient(to right, #eacc64, #85dffe);
+}
+
+.color03 {
+  background: linear-gradient(to bottom, #e0c3dc, #bd6fad);
+}
+
+.color02 {
+  background: linear-gradient(to right, #fbcf57, #d97791);
+}
+
+.color01 {
+  background: linear-gradient(to bottom, #fff2ef, #f6998d);
+}
+
 .card-container {
   display: block;
   white-space: nowrap;
@@ -20671,6 +20689,17 @@ p {
       align-items: center;
   height: 100%;
   padding: 5vh 2vw 10vh 2vw;
+}
+
+@media (max-width: 768px) {
+  .card-container {
+    display: block;
+    height: 100%;
+    padding: 1% 0%;
+    position: relative;
+    z-index: 2;
+    white-space: initial;
+  }
 }
 
 .card-container .card {
@@ -20695,6 +20724,21 @@ p {
 @media (max-width: 1200px) {
   .card-container .card {
     min-width: 80px;
+  }
+}
+
+@media (max-width: 768px) {
+  .card-container .card {
+    overflow: visible;
+    position: relative;
+    transition: 0.3s ease all;
+    background-color: transparent;
+    border: none;
+    min-width: 0;
+    width: 100%;
+    height: 10%;
+    margin: 0 0 -5% 0;
+    perspective: 700px;
   }
 }
 
@@ -20729,8 +20773,17 @@ p {
   transform: translate(0, -200%);
 }
 
-.card-container .card .card-wrap .card-bar.animated.ani-down {
+.card-container .card .card-wrap .card-bar.animated.ani-reverse {
   transform: translate(0, 200%);
+}
+
+@media (max-width: 768px) {
+  .card-container .card .card-wrap .card-bar.animated {
+    transform: translate(-200%, 0);
+  }
+  .card-container .card .card-wrap .card-bar.animated.ani-reverse {
+    transform: translate(200%, 0);
+  }
 }
 
 .card-container .card .card-wrap .card-bar.animated .card-bg {
@@ -20749,30 +20802,6 @@ p {
   height: 100%;
   opacity: 0;
   transition: 1s ease all;
-}
-
-.color06 {
-  background: linear-gradient(to right, #2d376f, #f2b040);
-}
-
-.color05 {
-  background: linear-gradient(to right, #bb4e9c, #ec195b);
-}
-
-.color04 {
-  background: linear-gradient(to right, #eacc64, #85dffe);
-}
-
-.color03 {
-  background: linear-gradient(to bottom, #e0c3dc, #bd6fad);
-}
-
-.color02 {
-  background: linear-gradient(to right, #fbcf57, #d97791);
-}
-
-.color01 {
-  background: linear-gradient(to bottom, #fff2ef, #f6998d);
 }
 
 .bar-container {
