--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,14 +27,23 @@ body {
 }
 
 html {
+  width: 100%;
+  overflow: hidden;
+}
+
+body {
+  border: 4px solid #fff;
+  border-bottom: none;
+  border-radius: 15px 15px 0 0;
   height: 100vh;
-  width: auto;
+  width: 100%;
   overflow: hidden;
   overflow-x: auto;
+
   @media (max-width: $md) {
     overflow: hidden;
     overflow-y: auto;
-    height: initial;
+    height: 100%;
   }
   &::-webkit-scrollbar {
     height: 4px;
@@ -42,17 +51,8 @@ html {
     background-color: white;
   }
   &::-webkit-scrollbar-thumb:horizontal {
-    background-color: #1a1a1a;
-    border-radius: 10px;
-  }
-}
-
-body {
-  @media (max-width: $md) {
-    // overflow: auto;
-    border: 3px solid #fff;
-    border-bottom: none;
-    border-radius: 15px 15px 0 0;
+    background-color: #646464;
+    border-radius: 100%;
   }
 }
 
@@ -145,7 +145,7 @@ p {
 
   > .vertical-block,
   > .vertical-title {
-    margin: 0 -4px;
+    margin: 0 -4px 0 0;
 
     &:first-child {
       margin-left: 0;
@@ -157,7 +157,7 @@ p {
     vertical-align: top;
     display: inline-block;
     height: 100%;
-    border-top: 4px solid #fff;
+    // border-top: 4px solid #fff;
     margin-right: -18px;
   }
 
@@ -170,6 +170,7 @@ p {
     min-width: 3vw;
     color: #fff;
     cursor: pointer;
+    margin: -4px 0;
 
     &,
     .title-wrap {
@@ -210,13 +211,13 @@ p {
           // display: none;
           position: absolute;
           z-index: 1;
-          top: 0;
+          top: 4px;
           left: 0;
           width: 100%;
-          height: 100%;
+          height: calc(100% - 8px);
           background-color: #1a1a1a;
-          border-top: 4px solid white;
-          border-bottom: 4px solid white;
+          // border-top: 4px solid white;
+          // border-bottom: 4px solid white;
         }
       }
 
@@ -505,18 +506,15 @@ p {
   z-index: 99;
   height: 100%;
   background-color: #fff;
-  padding: 3.5px 0 0px 4px;
   z-index: 999;
 
+  @media (min-width: 1600px) {
+    width: 70px;
+  }
   @media (max-width: $md) {
     position: fixed;
     height: 85px;
     width: 100%;
-    padding: 3px 3px 0;
-  }
-
-  @media (min-width: 1600px) {
-    width: 70px;
   }
 
   .header-content {
@@ -525,9 +523,13 @@ p {
     height: 100%;
     display: flex;
     flex-direction: column;
+    border: 4px solid white;
+    border-right: 0;
 
     @media (max-width: $md) {
       border-radius: 15px 15px 0 0;
+      border: 4px solid white;
+      border-right: 4px solid white;
     }
 
     &::after {
@@ -541,6 +543,7 @@ p {
         border-radius: 15px 15px 0 0;
         // background-color: #1a1a1a;
         transform: translateX(-4px);
+        display: none;
       }
     }
 
@@ -588,8 +591,8 @@ p {
       @media (max-width: $md) {
         height: 70px;
         padding: 37px 0;
-        right: 0;
-        top: 35px;
+        right: 12px;
+        top: 42px;
       }
 
       @media (min-width: 1600px) {
