--- a/css/style.css
+++ b/css/style.css
@@ -18312,6 +18312,35 @@ p {
   }
 }
 
+.scroll-right {
+  position: absolute;
+  bottom: 6%;
+  right: 260px;
+  width: 120px;
+  z-index: 2;
+}
+
+.scroll-right.fixed {
+  position: fixed;
+}
+
+.scroll-right img {
+  width: 100%;
+  max-width: 100%;
+}
+
+.intro-bottom {
+  position: absolute;
+  bottom: 8%;
+  left: 1.5%;
+  width: 9%;
+  z-index: 2;
+}
+
+.intro-bottom .logo-text {
+  width: 100%;
+}
+
 .intro {
   height: 100%;
   display: -ms-inline-flexbox;
@@ -18332,7 +18361,7 @@ p {
 
 .intro .main .kv {
   position: relative;
-  height: 100%;
+  height: 85%;
   margin-bottom: auto;
 }
 
@@ -18353,30 +18382,6 @@ p {
   z-index: 99;
   pointer-events: none;
   transform: translateY(-50%);
-}
-
-.intro .main .intro-bottom {
-  position: absolute;
-  bottom: 2%;
-  width: 78vw;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: end;
-      align-items: flex-end;
-}
-
-.intro .main .intro-bottom .logo-text {
-  margin-right: auto;
-  width: 24%;
-}
-
-.intro .main .intro-bottom .scroll-right {
-  width: 7%;
-}
-
-.intro .main .intro-bottom .scroll-right img {
-  width: 100%;
-  max-width: 100%;
 }
 
 .intro .intro-text {
@@ -20689,7 +20694,7 @@ p {
   -ms-flex-align: center;
       align-items: center;
   height: 100%;
-  padding: 5vh 2vw 10vh 2vw;
+  padding: 5vh 2vw 5vh 2vw;
 }
 
 @media (max-width: 768px) {
